# HPCProject

./: CUDA_PDE_Solvers.ipynb  README.md
PDE_Solvers/: CMakeLists.txt  README.md
PDE_Solvers/data/: heat_final.txt  heat_output.txt  heat_step_0.txt  heat_step_100.txt  heat_step_200.txt  heat_step_300.txt  heat_step_400.txt  heat_step_500.txt  heat_step_600.txt  heat_step_700.txt  heat_step_800.txt  heat_step_900.txt  wave_final.txt  wave_output.txt  wave_step_0.txt  wave_step_100.txt  wave_step_150.txt  wave_step_200.txt  wave_step_250.txt  wave_step_300.txt  wave_step_350.txt  wave_step_400.txt  wave_step_450.txt  wave_step_50.txt  wave_step_500.txt  wave_step_550.txt  wave_step_600.txt  wave_step_650.txt  wave_step_700.txt  wave_step_750.txt  wave_step_800.txt  wave_step_850.txt  wave_step_900.txt  wave_step_950.txt
PDE_Solvers/include/: heat_solver.h  wave_solver.h
PDE_Solvers/src/: heat_solver  heat_solver.cpp  visualize_heat.py  vizualize_wave.py  wave_solver.cpp
